[fix] #14 で named exports に置き換えて記事が読めなくなったので修正

--- a/content/blog/Gatsby/replace_gatsby_blog_mdx/index.mdx
+++ b/content/blog/Gatsby/replace_gatsby_blog_mdx/index.mdx
@@ -22,7 +22,7 @@ import TagList from "@components/molecules/tag-list.tsx"
 <TagList tags={[`Gatsby`, `ブログ`, ]} isLink />
 ```
 
-import TagList from "@components/molecules/tag-list.tsx"
+import { TagList } from "@components/molecules/tag-list.tsx"
 
 <TagList tags={[`Gatsby`, `ブログ`, ]} isLink />
 
