[auto] post article

--- a/content/blog/Django/drf_serializer_auto_type/index.mdx
+++ b/content/blog/Django/drf_serializer_auto_type/index.mdx
@@ -5,6 +5,7 @@ category: "Django"
 tags:
   - "Python"
   - "Django"
+  - "DRF"
   - "TypeScript"
 date: "2020-11-21T00:18:12Z"
 thumbnail: "thumbnails/Django.png"
