[auto] post article

--- a/content/blog/Gatsby/replace_gatsby_blog_mdx/index.mdx
+++ b/content/blog/Gatsby/replace_gatsby_blog_mdx/index.mdx
@@ -17,7 +17,7 @@ draft: false
 まず、Mdx を使うことで記事ファイル中に React のコンポーネントを埋め込めます
 
 ``` mdx
-import TagList from "@components/molecules/tag-list.tsx"
+import { TagList } from "@components/molecules/tag-list.tsx"
 
 <TagList tags={[`Gatsby`, `ブログ`, ]} isLink />
 ```
