[update] loadable-components を import 用のもののみに変更 #18

--- a/content/blog/tutorial/markdown.mdx
+++ b/content/blog/tutorial/markdown.mdx
@@ -94,7 +94,7 @@ render(<button onClick={onClick}>Click Me!</button>)
 
 `mdx` ファイルでは、React Component の埋め込みをサポートします
 
-import { TagList } from "@components/molecules/tag-list.tsx"
+import { TagList } from "@mdx"
 
 <TagList tags={[`Markdown`, `ブログ`]} isLink />
 
