[auto] post article

--- a/content/blog/雑記/book_memo_seven_habits/index.mdx
+++ b/content/blog/雑記/book_memo_seven_habits/index.mdx
@@ -1,11 +1,11 @@
 ---
 title: "読書メモ: 7つの習慣"
 description: 7つの習慣を読んだので、要約と感想を書きます。
-category: "book"
+category: "雑記"
 tags:
   - 読書メモ
 date: "2020-12-27T15:44:01Z"
-thumbnail: "thumbnails/book.png"
+thumbnail: "thumbnails/雑記.png"
 draft: false
 ---
 
