[auto] post article

--- a/content/blog/Next/ssg_nextjs_image_optimization/index.mdx
+++ b/content/blog/Next/ssg_nextjs_image_optimization/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Next.jsをSSGで配信するときの画像最適化について"
-description: まだ書かれていません
+description: "まだ書いてません"
 category: "Next"
 tags:
   - "Next.js"
@@ -9,21 +9,32 @@ thumbnail: "thumbnails/Next.png"
 draft: true
 ---
 
-## tl;dr
+<!-- canary ブランチでまだ tracedSVG が未対応なので、対応次第加筆して投稿する！！ -->
 
-- Vercel を使うなら next/image でできるけど、SSGホスティングだと無理
-  - サードパーティ製の対応もできるけど、お高い(T_T)
-- ローカルのランタイムで最適化する
-  - png/jpeg → webp へ変換 & 配信
-  - tracedSVG (Gatsby と同じやつ)
+## TL;DR
+
+画像最適化は、`next/image` が人気だけど、SSG モードだとできません
+
+ローカルでビルド時に最適化する [cyrilwanner/next-optimized-images](https://github.com/cyrilwanner/next-optimized-images) はちょっと使いにくい & 型サポートがないって感じだったんですけど、canary バージョンでだいぶ改善されたので紹介します
+
+- webp へ変換 & 配信
+- tracedSVG (Gatsby とか、[Medium](https://medium.com/) でよく見るやつ)
 
 ## 準備
 
-[GitHub - cyrilwanner/next-optimized-images: 🌅 next-optimized-images automatically optimizes images used in next.js projects (jpeg, png, svg, webp and gif).](https://github.com/cyrilwanner/next-optimized-images)
+今回使うパッケージを取得します
 
 ``` bash
-$ yarn add next-compose-plugins next-optimized-images webp-loader image-trace-loader
+$ yarn add next-compose-plugins next-optimized-images@canary webp-loader image-trace-loader
 ```
+
+[Optimization Packages](https://github.com/cyrilwanner/next-optimized-images#optimization-packages) から必要なものを導入します
+
+今回はとりあえず、webp 用 と tracedSVG 用のものをいれてます。
+
+## 設定ファイルの準備
+
+最低限の設定ファイルを準備します
 
 ``` javascript:next.config.js
 const withPlugins = require('next-compose-plugins');
@@ -35,7 +46,9 @@ module.exports = withPlugins([
   }],
 
   // your other plugins here
-]);
+], {
+  // next config here
+});
 ```
 
 ``` json:.babelrc
@@ -49,25 +62,27 @@ module.exports = withPlugins([
 /// <reference types="optimized-images-loader" />
 ```
 
-## webp 対応
+## webp コンポーネントの利用
 
-``` typescript
-import Image from 'react-optimized-image';
+`react-optimized-image` コンポーネントで画像を埋め込みます
+
+``` tsx
+import Img from 'react-optimized-image';
 import logo from '@images/logo.jpg';
 
 export const LogoImage: React.FC = () => (
-  <Image src={logo} sizes={[500, 2000]} alt="alt text" height={60} width={100} />
+  <Img src={logo} sizes={[500, 2000]} alt="alt text" height={60} width={100} />
 )
 ```
 
-sizes は想定してるデバイスサイズ
+sizes は想定してるデバイスサイズで、
 
 上の例なら、
 
 - 〜500
 - 501〜
 
-用の2種類が生成される
+用の2種類が生成されます
 
 ## tracedSVG
 
