--- a/content/about/index.mdx
+++ b/content/about/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "このブログについて"
-description: "これはAboutPageです."
+description: "きむそん.devでは、Web技術に関する記事をメインに投稿しています。"
 ---
 
 このブログは、Webに関連する技術を中心に個人的なアウトプットの場にしているものです。
@@ -17,7 +17,13 @@ description: "これはAboutPageです."
 
 Web技術全般に関する記事をメインに書いていきます。
 
-フロントに関しては、[Vue.js](https://jp.vuejs.org/index.html)、バックに関しては、[Python](https://www.python.org/) や [TypeScript](https://www.typescriptlang.org/) が好きなので、この辺に関する記事が多くなると思います。
+最近は、
+
+- [Node.js](https://nodejs.org/) 周りのツールチェイン
+- [React](https://reactjs.org/)
+- [TypeScript](https://www.typescriptlang.org/)
+
+への関心が強いので、この辺に関する記事が多くなると思います。
 
 ### ご連絡
 
