[article] post article

--- a/content/blog/Gatsby/gatsby_v3/index.mdx
+++ b/content/blog/Gatsby/gatsby_v3/index.mdx
@@ -151,7 +151,9 @@ SCSS だと CSS Modules が読み込めなくなっていて、`gatsby-plugin-sa
 
 `cssLoaderOptions` で明示的に有効化してやって対応しました
 
-あとで、少し試してプルリクを出しておこうと思います
+~~~あとで、少し試してプルリクを出しておこうと思います~~~
+
+追記: `v4.0.2` で修正されてました
 
 ## パフォーマンス
 
