[article] post article

--- a/content/about/index.mdx
+++ b/content/about/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "このブログについて"
-description: "きむそん.devでは、Web技術に関する記事をメインに投稿しています。"
+description: "Web技術に関する記事をメインに投稿しています。"
 ---
 
 このブログは、Web に関連する技術を中心に個人的なアウトプットの場にしているものです。
