--- a/content/blog/バックエンド/fastapi_openapi_generator_file_with_nested_object/index.mdx
+++ b/content/blog/バックエンド/fastapi_openapi_generator_file_with_nested_object/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "FastAPI の OpenAPI スキーマから openapi-generator でファイルとネストされたリクエストボディを受け取るエンドポイントの型が定義されない問題への対処法"
 description: "FastAPIのOpenAPIスキーマからopenapi-generatorでファイルとネストされたリクエストボディを受け取るときに発生する、型が定義されない問題へ対処する方法を紹介します。"
-category: "Python"
+category: "バックエンド"
 tags:
   - FastAPI
 date: "2021-01-03T06:39:04Z"
