--- a/content/blog/フロントエンド/auth0_token_django_next_imple/index.mdx
+++ b/content/blog/フロントエンド/auth0_token_django_next_imple/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "auth0 の iframe を使ったトークンの保持の手法を調べたので、Django と Next で実装してみた"
-description: まだ書かれていません
-category: "Next"
+description: auth0 の iframe を使ったトークンの保持の手法(Silent Authentication)を調べたので、Django と Next で実装してみた
+category: "フロントエンド"
 tags:
   - Django
   - Next.js
@@ -213,12 +213,6 @@ export default MyApp
 ログインできることが確認できます！
 
 リロードしても、iframe を経由してログイン状態を維持できていることが分かります！
-
-## XSS は怖くない？
-
-今回の実装だと XSS に対して被害がないということはもちろんなく、スクリプトを挿入できる時点で `auth.ts` と同じ処理をかけばトークンが取得できてしまうことになります(ローカルストレージから取るよりは遥かに面倒だとは思いますが)
-
-とはいえ、ローカルストレージに置く場合には `トークンのリセット期間` = `ユーザーが再ログインする期間` になってしまうので、セキュリティ的な強さと UX がトレードオフになります。今回の手法ならセッションでログイン状態は維持できるのでトークンのリセットを高頻度で行うことができて良さそうだと思いました
 
 ## 参考
 
