--- a/content/blog/インフラ/heroku_docker_image/index.mdx
+++ b/content/blog/インフラ/heroku_docker_image/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Heroku に SPA on Django の Docker イメージをデプロイする"
-description: まだ書かれていません
-category: "Heroku"
+description: "Heroku に Docker イメージをデプロイしたので簡単にメモを残します"
+category: "インフラ"
 tags:
   - Heroku
   - Docker
