[article] post article

--- a/content/blog/TypeScript/ts_conditional_type_infer/index.mdx
+++ b/content/blog/TypeScript/ts_conditional_type_infer/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "TypeScript の Conditional Types の Infer の集約挙動を調べた"
-description: まだ書かれていません
+description: "TypeScript の Infer を利用して特殊な型を取り出す方法を紹介します"
 category: "TypeScript"
 tags:
   - TypeScript
