[article] post article

--- a/content/blog/雑記/2021_look_back/index.mdx
+++ b/content/blog/雑記/2021_look_back/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "2021年を振り返りと2022年に向けて"
-description: まだ書かれていません
+description: "2021年を振り返る。そして、22年への抱負。"
 category: "雑記"
 tags:
   - 振り返り
