refactor(*): 型エラーの修正とバージョンアップ対応

--- a/content/blog/Gatsby/gatsby_v3/index.mdx
+++ b/content/blog/Gatsby/gatsby_v3/index.mdx
@@ -81,7 +81,7 @@ childImageSharp {
 ```
 
 ```tsx:GatsbyImage
-import { GatsbyImage } from "gatsby-plugin-image"
+import { Image } from "~/components/common/image"
 
 const image = data.hoge.childImageSharp.gatsbyImageData
 
