--- a/content/blog/Gatsby/replace_gatsby_blog_mdx/index.mdx
+++ b/content/blog/Gatsby/replace_gatsby_blog_mdx/index.mdx
@@ -22,7 +22,7 @@ import { TagList } from "@components/molecules/tag-list.tsx"
 <TagList tags={[`Gatsby`, `ブログ`]} isLink />
 ```
 
-import { TagList } from "@mdx"
+import { TagList } from "@mdx-components/tag-list"
 
 <TagList tags={[`Gatsby`, `ブログ`]} isLink />
 
