feat(about): about を更新した

--- a/content/about/index.mdx
+++ b/content/about/index.mdx
@@ -1,9 +1,9 @@
 ---
 title: "このブログについて"
-description: "Web技術に関する記事をメインに投稿しています。"
+description: "Web に関する記事をメインに不定期で書いています。"
 ---
 
-このブログは、Web に関連する技術を中心に個人的なアウトプットの場にしているものです。
+このブログは、Web に関連する技術を中心に個人的なアウトプットの場として不定期で書いているものです。
 
 備忘録ついでのメモ書き程度のものも多いので、ご了承ください。
 
@@ -13,21 +13,11 @@ description: "Web技術に関する記事をメインに投稿しています。
 
 ## 筆者について
 
-筆者は、[会津大学](https://www.u-aizu.ac.jp/) に在学中のソフトウェアエンジニア(~~就業経験があるわけではないので自称~~)です。
+お仕事でソフトウェアエンジニアをしています。
 
-Web 技術全般に関する記事をメインに書いていきます。
-
-最近は、
-
-- [Node.js](https://nodejs.org/) 周りのツールチェイン
-- [React](https://reactjs.org/)
-- [TypeScript](https://www.typescriptlang.org/)
-
-への関心が強いので、この辺に関する記事が多くなると思います。
+[TypeScript](https://www.typescriptlang.org/) と型が好きなのでその辺りの記事をよく書きます。
 
 ### ご連絡
-
-このブログには、現時点でコメント等の機能はありません。
 
 連絡を取りたい場合には、以下 SNS またはメールにてお願いします。
 
