--- a/content/blog/TypeScript/react_router_typing/index.mdx
+++ b/content/blog/TypeScript/react_router_typing/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "React Router 版 pathpida みたいなライブラリ作った"
-description: まだ書かれていません
-category: "@CATEGORY"
+description: React Router でナビゲーションを型安全にする pathpida みたいなライブラリを作った。
+category: "TypeScript"
 tags:
   - TypeScript
   - React
