feat(*): 画像表示対応

--- a/src/content/internal-article/Python/mypy_pylance/index.mdx
+++ b/src/content/internal-article/Python/mypy_pylance/index.mdx
@@ -160,7 +160,7 @@ def get(url: str、...) -> Response:
 
 VSCode に mypy のプラグインを入れていると、先程例にあげた `devide(10、"こんにちは")` の型違いエラーは CLI から `mypy` を走らせるまでもなく問題があることを把握できます
 
-![](./mypy_sample.png)
+![](../mypy_pylance/mypy_sample.png)
 
 あるいは、最近 VSCode 拡張に追加された [Pylance](https://github.com/microsoft/pylance-release) が優秀で、型周りを強くサポートしてくれます
 
