fix-article(astro_remake_blog): 記事直したのと下書き外した

--- a/src/content/internal-article/フロントエンド/astro_remake_blog/index.mdx
+++ b/src/content/internal-article/フロントエンド/astro_remake_blog/index.mdx
@@ -6,7 +6,7 @@ tags:
 category: "フロントエンド"
 date: "2023-09-25T00:50:14+09:00"
 weight: 5
-draft: true
+draft: false
 ---
 
 このブログの静的サイトジェネレーターを Gatsby から Astro へ乗り換えたので理由とか、結果どうだったか等を書きます。
@@ -47,11 +47,13 @@ Astro では Gatsby とは異なり
 
 ## preact-plugin を使う
 
-Astro では独自の `.astro` というファイル形式(スタイルとスクリプトとHTMLがかけるので Vue の SFC に近いです)がサポートされていますが、任意のコンポーネントライブラリと統合できて、React やら Vue やらを好きに使うことができます。
+Astro では独自の `.astro` というファイル形式(スタイルとスクリプトとHTMLがかけるので Vue の SFC に近いです)がサポートされていますが、任意のコンポーネントライブラリと統合できて、React やら Vue やらを好きに使うことができます。基本は React で特定の部分だけ Vue で、といったこともできるようです。
 
 astro ファイルは独自ファイルフォーマットをあまり使いたくないので、UI は React や Vue 等のよくあるライブラリで書いていきたいです。
 
-先にも書いたように基本はクライアントサイドでJSは読まないんですが、インタラクションの必要なコンポーネントでは partial hydration によって読み込まれるので、できるだけサイズが小さいライブラリが望ましく preact を使うことにしました。Svelte や SolidJS はより適していると思いますが、React が書きなれてるのとそっちのキャッチアップモチベーションはあまり高くないので素直に preact を選びました。
+先にも書いたように基本はクライアントサイドでJSは読まないんですが、インタラクションの必要なコンポーネントでは partial hydration によって読み込まれるので、できるだけサイズが小さいライブラリが望ましく preact を使うことにしました。
+
+SSG のみのサイトでレンダリングコストが軽いことも考えれば Svelte や SolidJS はより適していると思いますが、React が書きなれてるのとそっちのキャッチアップモチベーションはあまり高くないので素直に preact を選びました。
 
 preact は Astro 公式でサポートされています。
 
