fix-article(ts_switch_try_catch): draft外す

--- a/src/content/internal-article/TypeScript/ts_switch_try_catch/index.mdx
+++ b/src/content/internal-article/TypeScript/ts_switch_try_catch/index.mdx
@@ -6,7 +6,7 @@ tags:
   - TypeScript
 date: "2023-10-13T08:39:15Z"
 thumbnail: "thumbnails/TypeScript.png"
-draft: true
+draft: false
 ---
 
 TS の if、switch とか try-catch 等は「文」なので再代入が必要で使いづらい
